# plantilla

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/paquete_ejemplo/: __main__.py
tests/: test_main.py
